--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.155",
     "@nuxt/content": "^2.9.0",
+    "@unocss/nuxt": "^0.58.0",
+    "@vueuse/nuxt": "^10.7.0",
     "nuxt": "^3.8.2"
   }
 }
