--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.155",
     "@nuxt/content": "^2.9.0",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@unocss/nuxt": "^0.58.0",
     "@vueuse/nuxt": "^10.7.0",
     "nuxt": "^3.8.2"
